<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_hint"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/sort_priority" android:title="@string/sort_by_priority" />
            <item android:id="@+id/sort_due" android:title="@string/sort_by_due_date" />
            <item android:id="@+id/sort_created" android:title="@string/sort_by_created" />
        </menu>
    </item>
</menu>